# Luckfox-Ultra-Dashcam

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  config.h  main.c  state_machine.c  state_machine.h
cmake/: luckfox.toolchain.cmake
common/: CMakeLists.txt  log.c  log.h
docs/: Luckfox-Pico-Ultra-W-5fb258ed24c23939a00297232d84e214.md
hal/: CMakeLists.txt
hal/camera/: camera_hal.c  camera_hal.h
hal/camera/mis5001/: mis5001_camera.c  mis5001_camera.h
hal/encoder/: encoder_hal.c  encoder_hal.h
hal/encoder/rkmpp/: rkmpp_encoder.c  rkmpp_encoder.h
hal/gpio/: gpio_hal.c  gpio_hal.h
hal/gpio/libgpiod/: gpiod_button.c  gpiod_button.h
hal/storage/: storage_hal.c  storage_hal.h
hal/storage/sdcard/: sdcard_storage.c  sdcard_storage.h
middleware/: CMakeLists.txt
middleware/isp/: isp.c  isp.h
middleware/isp/rkaiq/: rkaiq_isp.c  rkaiq_isp.h
middleware/muxer/: muxer.c  muxer.h
middleware/muxer/fmp4/: fmp4_muxer.c  fmp4_muxer.h
middleware/pipeline/: pipeline.c  pipeline.h
middleware/pipeline/rkmpi/: rkmpi_pipeline.c  rkmpi_pipeline.h
middleware/rtsp/: rtsp.c  rtsp.h
middleware/rtsp/live555/: live555_rtsp.c  live555_rtsp.h
toolchain/: .gitignore
